--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         <activity
             android:name=".FirstAidactivity"
             android:configChanges="keyboardHidden|orientation" />
+
+        <provider
+            android:authorities="com.course.mytestapp.providers"
+            android:multiprocess="true"
+            android:name=".providers.MythProvider"></provider>
     </application>
 
 </manifest>
