--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,17 @@ android {
         }
     }
 }
-
+repositories {
+    jcenter()
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.mcxiaoke.volley:library:1.0.6@aar'
+    compile 'com.google.firebase:firebase-core:9.0.2'
+    compile 'com.github.satyan:sugar:1.4'
+    compile 'com.google.android.gms:play-services:9.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
