--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    //Add the following block
+    packagingOptions{
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+
+    }
 }
 repositories {
     jcenter()
@@ -24,11 +31,18 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.mcxiaoke.volley:library:1.0.6@aar'
     compile 'com.google.firebase:firebase-core:9.0.2'
     compile 'com.github.satyan:sugar:1.4'
     compile 'com.google.android.gms:play-services:9.0.2'
+    compile 'com.google.firebase:firebase-messaging:9.0.2'
+    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.google.code.gson:gson:2.3'
+        //Adding Firebase
+    compile 'com.firebase:firebase-client-android:2.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.3.1'
 }
 apply plugin: 'com.google.gms.google-services'
