--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -39,7 +40,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.google.firebase:firebase-messaging:9.0.2'
     compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    //compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.3'
         //Adding Firebase
     compile 'com.firebase:firebase-client-android:2.4.0'
