--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.ruthiy.care2car"
@@ -19,7 +19,7 @@ android {
         }
     }
     //Add the following block
-    packagingOptions{
+    packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
@@ -30,7 +30,7 @@ repositories {
     jcenter()
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
@@ -42,8 +42,9 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     //compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.3'
-        //Adding Firebase
+    //Adding Firebase
     compile 'com.firebase:firebase-client-android:2.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
